--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,8 @@ main {
     --color-body-darker: 5c5577;
     --color-border: #ccc;
     --border-radius: 30px;
+    --color-border: #ccc;
+    --border-radius: 30px;
 }
 
 *,
@@ -277,8 +279,8 @@ a {
 
 /* Inputs */
 .input {
-    border-radius: 30px;
-    border: 1px solid #ccc;
+    border-radius: var(--border-radius);
+    border: 1px solid var(--color-border);
     color: var(--color-headings);
     font-size: 2rem;
     outline: 0;
@@ -287,6 +289,23 @@ a {
 
 ::placeholder {
     color: #cdcbd7;
+}
+
+.input-group {
+    border: 1px solid var(--color-border);
+    border-radius: var(--border-radius);
+    display: flex;
+}
+
+.input-group .input {
+    border: 0;
+    flex-grow: 1;
+    padding: 1.5rem 1rem;
+    width: 0;
+}
+
+.input-group .btn {
+    margin: 4px;
 }
 
 @media screen and (min-width: 1024px) {
