--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,10 @@ main {
 }
 
 /* Typography */
+::selection {
+    background: var(--color-primary);
+    color: #fff;
+}
 
 html {
     /* 62.5% of 16px = 10px */
@@ -63,6 +67,7 @@ h2 {
 
 h3 {
     font-size: 2.8rem;
+    font-weight: 500;
 }
 
 p {
@@ -153,7 +158,6 @@ a {
 .list {
     list-style: none;
     padding-left: 0;
-    color: var(--color-headings);
 }
 
 .list--inline .list__item {
@@ -164,6 +168,7 @@ a {
 .list--tick {
     list-style-image: url(../images/tick.svg);
     padding-left: 3rem;
+    color: var(--color-headings);
 }
 
 .list--tick .list__item {
@@ -653,18 +658,20 @@ a {
     color: #7b858b;
 }
 
-.block--dark .block__heading {
+.block--dark h1,
+.block--dark h2,
+.block--dark h3 {
     color: #fff;
 }
 
 .block--skewed-right {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 95%);
 }
 
 .block--skewed-left {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
 }
 
 .container {
@@ -737,11 +744,6 @@ a {
 }
 
 /* Hero */
-.hero {
-    clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
-    padding-top: 0;
-}
-
 .hero__tagline {
     font-size: 2rem;
     color: #b9c3cf;
@@ -806,5 +808,24 @@ a {
 @media screen and (min-width: 768px) {
     .feature:nth-of-type(even) .feature__content {
         order: 2;
+    }
+}
+
+/* Showcase Block */
+
+
+.block-showcase__image {
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .block-showcase .grid {
+        grid-template-columns: 50% 50%;
+    }
+    
+    .block-showcase__image {
+        width: auto;
+        max-width: 700px;
+        justify-self: end;
     }
 }
