--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ main {
     --color-accent: #ff3400;
     --color-headings: #1b0760;
     --color-body: #918ca4;
-    --color-body-darker: 5c5577;
+    --color-body-darker: #5c5577;
     --color-border: #ccc;
     --color-body-darker: #5c5577;
     --border-radius: 30px;
@@ -154,7 +154,7 @@ a {
     }
 }
 
-/* List */
+/* Lists */
 .list {
     list-style: none;
     padding-left: 0;
@@ -224,7 +224,7 @@ a {
     font-weight: 600;
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
@@ -424,7 +424,7 @@ a {
     }
 
     .plan__price {
-        font-size: 4rem;
+        font-size: 5rem;
     }
 
     .plan__billing-cycle {
@@ -686,7 +686,7 @@ a {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 0 1rem;
+    padding:0 1rem;
     align-items: center;
 }
 
@@ -772,8 +772,9 @@ a {
 }
 
 .block-domain__prices {
+    color: var(--color-headings);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 6rem);
     font-size: 2rem;
     font-weight: 600;
@@ -786,6 +787,16 @@ a {
     .block-domain__prices {
         grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     }
+}
+
+/* Plans Block */
+.block-plans .grid {
+    gap: 8rem 4rem;
+}
+
+.block-plans .card {
+    max-width: 500px;
+    margin: 0 auto;
 }
 
 /* Features */
